--- a/src/index2.css
+++ b/src/index2.css
@@ -1,10 +1,11 @@
 .container4{
+    margin: 10px;
     display: flex;
-    min-height: 70px;
     align-items: start;
     padding-right: 35px;
     padding-left:20px;
     padding-top: 10px;
+    background-color: #262626;
     justify-self: center;
 }
 .desc{
